<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".view.activity.BookmarksActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/favorite_movie_item_ivposter"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_weight="2"
            android:contentDescription="@string/poster"
            android:src="@drawable/poster_spiderman" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/favorite_movie_item_tvtitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/judul_film"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/rating"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/_titikdua"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/favorite_movie_item_tvrating"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/_4_5"
                    android:textSize="24sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>